Atualizando blog automaticamente

--- a/Mitolyn/01-unlock-your-bodys-real-fat-burning-power/index.html
+++ b/Mitolyn/01-unlock-your-bodys-real-fat-burning-power/index.html
@@ -71,7 +71,7 @@
     <h1>Unlock Your Body’s Real Fat-Burning Power</h1>
 
     <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
-      <img src="https://imgur.com/v6nxx8o.jpg" alt="A woman silhouette with radiant mitochondria inside, lighting up the torso like glowing embers" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
+      <img src="https://imgur.com/SXAzKg7.jpg" alt="A woman silhouette with radiant mitochondria inside, lighting up the torso like glowing embers" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
     </a>
 
     <p>Feeling exhausted, foggy, or stuck in a stubborn weight plateau—even with healthy eating and exercise? You might be focusing on the wrong problem. New research suggests that the root of slow metabolism lies deep within your <strong>mitochondria</strong>—the tiny powerhouses in your cells responsible for energy production and fat burning.</p>
