--- a/Mitolyn/02-undercharged-body/index.html
+++ b/Mitolyn/02-undercharged-body/index.html
@@ -71,7 +71,7 @@
     <h1>Your Body Isn’t Broken. It’s Just Undercharged</h1>
 
     <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
-      <img src="https://imgur.com/GDvptW4.jpg" alt="Mitochondria fatigue metaphor" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
+      <img src="https://imgur.com/nOmBltb.jpg" alt="A smartphone icon with a 1% battery symbol transitioning to 100% powered by glowing mitochondria" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
     </a>
 
     <p>Chronic fatigue. Slow weight loss. Brain fog. These are not flaws—they’re signals. If you feel like your body isn’t cooperating no matter how hard you try, the issue could be inside your cells. More specifically: your <strong>mitochondria</strong>.</p>
@@ -94,7 +94,7 @@
        <strong>Day 90:</strong> Noticeable fat loss, better digestion, deeper sleep.</p>
 
     <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
-      <img src="https://imgur.com/4jIDjc1.jpg" alt="User transformation on Mitolyn" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
+      <img src="https://imgur.com/37UVuzA.jpg" alt="fun 3d cartoon mitochondria with boxing gloves" loading="lazy" class="center" style="width: 50%; max-width: 700px;">
     </a>
 
     <h2>Who Should Try Mitolyn?</h2>
