--- a/prime-biome/01-lions-mane-benefits/index.html
+++ b/prime-biome/01-lions-mane-benefits/index.html
@@ -91,7 +91,7 @@
     <h1>7 Surprising Benefits of Lion’s Mane for Brain and Body</h1>
 
     <a href="https://b822f1wnjv2-7vcf2dubcesbut.hop.clickbank.net">
-      <img src="https://imgur.com/7ZGkjza.jpg" alt="A majestic lion lounging calmly atop a fluffy, cloud-like brain made of Lion’s Mane mushroom texture—its mane subtly blending into the brain folds. The lion wears reading glasses and peacefully surveys a sunlit landscape of clear skies and open roads below, symbolizing mental clarity and sharp focus" loading="lazy" />
+      <img src="https://imgur.com/D9btGay.jpg" alt="A majestic lion lounging calmly atop a fluffy, cloud-like brain made of Lion’s Mane mushroom texture—its mane subtly blending into the brain folds. The lion wears reading glasses and peacefully surveys a sunlit landscape of clear skies and open roads below, symbolizing mental clarity and sharp focus" loading="lazy" />
     </a>
 
     <p>Used for centuries in traditional medicine, Lion’s Mane mushroom (Hericium erinaceus) is now backed by science as a potent natural nootropic. But its benefits go far beyond the brain.</p>
@@ -109,7 +109,7 @@
     <p>Its anti-inflammatory properties extend to the gut, which is crucial for mental health and immune function.</p>
 
     <a href="https://b822f1wnjv2-7vcf2dubcesbut.hop.clickbank.net">
-      <img src="https://imgur.com/KdFPsdY.jpeg" alt="Lion’s Mane mushroom - Hericium erinaceus" loading="lazy" />
+      <img src="https://imgur.com/0kTYUBN.jpeg" alt="Lion’s Mane mushroom - Hericium erinaceus" loading="lazy" />
     </a>
 
     <h2>5. Protects Against Neurodegeneration</h2>
