--- a/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this/index.html
+++ b/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this/index.html
@@ -95,7 +95,7 @@
 
     <!-- IMAGEM ABAIXO DO TÍTULO -->
     <a href="https://b822f1wnjv2-7vcf2dubcesbut.hop.clickbank.net">
-      <img src="https://imgur.com/NtfeMSB.jpg" alt="Illustration of gut microbiome as balanced gears" loading="lazy" />
+      <img src="https://imgur.com/aeY02E6.jpg" alt="A lush garden shaped like an abstract intestine and tiny bad bacteria drawn like quirky cartoon gremlins" loading="lazy" />
     </a>
 
     <p>Ever felt like your stomach looks puffier than usual—even when you're eating healthy? Before you chalk it up to stubborn belly fat, consider this: it might be your gut microbiome throwing your digestion off balance, not your fat cells expanding.</p>
@@ -105,7 +105,7 @@
 
     <!-- IMAGEM INTERMEDIÁRIA -->
     <a href="https://b822f1wnjv2-7vcf2dubcesbut.hop.clickbank.net">
-      <img src="https://imgur.com/KKcfy9M.jpg" alt="Visualization of gut bacteria releasing gas bubbles in digestive tract" loading="lazy" />
+      <img src="https://imgur.com/WpX68qB.jpg" alt="Visualization of gut bacteria releasing gas bubbles in digestive tract" loading="lazy" />
     </a>
 
     <h2>2. How Your Gut Gets Out of Whack</h2>
