Atualizando blog automaticamente

--- a/14-day/07-sneaky-bloat-triggers/index.html
+++ b/14-day/07-sneaky-bloat-triggers/index.html
@@ -49,7 +49,7 @@
     <h1>Sneaky Bloat Triggers You Never Saw Coming</h1>
 
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net">
-      <img src="https://imgur.com/Embo30b.jpg" alt="Open toolbox overflowing with recipe cards, veggies, clipboard checklist and probiotic bottle, glowing with green sparkles." loading="lazy" />
+      <img src="https://imgur.com/Pm4nfCB.jpg" alt="Whack‑a‑mole board of nuts and nightshades being tapped by probiotic hammer, with fresh swaps around." loading="lazy" />
     </a>
 
     <h2>Wait—Almonds Are a Gut Offender?</h2>
