--- a/Mitolyn/01-unlock-your-bodys-real-fat-burning-power/index.html
+++ b/Mitolyn/01-unlock-your-bodys-real-fat-burning-power/index.html
@@ -77,7 +77,7 @@
     <p>Feeling stuck, bloated, or low-energy—despite doing “everything right”? You may be targeting the wrong system. Fat loss doesn’t start with dieting harder or training more. It starts in the mitochondria—your body's cellular engines.</p>
 
     <h2>The Real Reason Your Body Stores Fat</h2>
-    <p>Mitochondria are responsible for converting calories into usable energy (ATP). When they’re underperforming, you don’t just feel tired—you’re more likely to store fat and experience metabolic resistance. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">New research</a> links mitochondrial dysfunction to obesity, inflammation, and fatigue.</p>
+    <p>Mitochondria are responsible for converting calories into usable energy (ATP). When they’re underperforming, you don’t just feel tired—you’re more likely to store fat and experience metabolic resistance. <a href="https://pubmed.ncbi.nlm.nih.gov/29155300/" target="_blank">New research</a> links mitochondrial dysfunction to obesity, inflammation, and fatigue.</p>
 
     <h2>How Mitolyn Reawakens Your Metabolism</h2>
     <p>Mitolyn’s formula is built to rejuvenate mitochondria and restart fat burning from the inside out:</p>
