--- a/Mitolyn/02-undercharged-body/index.html
+++ b/Mitolyn/02-undercharged-body/index.html
@@ -77,7 +77,7 @@
     <p>Chronic fatigue. Slow weight loss. Brain fog. These are not flaws—they’re signals. If you feel like your body isn’t cooperating no matter how hard you try, the issue could be inside your cells. More specifically: your <strong>mitochondria</strong>.</p>
 
     <h2>Cellular Energy is the Root of Everything</h2>
-    <p>Your mitochondria generate ATP—the fuel your body uses to move, think, digest, and recover. But aging, stress, toxins, and nutrient deficiencies slow them down. A Harvard-backed <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">study on mitochondrial dysfunction</a> shows that impaired mitochondria are linked to chronic fatigue, weight gain, and metabolic slowdown.</p>
+    <p>Your mitochondria generate ATP—the fuel your body uses to move, think, digest, and recover. But aging, stress, toxins, and nutrient deficiencies slow them down. A Harvard-backed <a href="https://pubmed.ncbi.nlm.nih.gov/21726199/" target="_blank">study on mitochondrial dysfunction</a> shows that impaired mitochondria are linked to chronic fatigue, weight gain, and metabolic slowdown.</p>
 
     <h2>What Is Mitolyn?</h2>
     <p>Mitolyn is a cutting-edge supplement that helps recharge your body by restoring mitochondrial health. It combines natural, science-backed ingredients like:</p>
