--- a/Mitolyn/03-this-isnt-caffeine/index.html
+++ b/Mitolyn/03-this-isnt-caffeine/index.html
@@ -77,7 +77,7 @@
     <p>Caffeine gives you a temporary buzz—then crashes, jitters, and burnout follow. If you're tired of the rollercoaster, it's time to rethink energy at the source: your <strong>mitochondria</strong>.</p>
 
     <h2>What If Your Body Could Make Its Own Energy?</h2>
-    <p>That’s exactly what Mitolyn supports. Mitochondria are your cells’ power plants, converting nutrients into ATP—the real fuel of life. With age, stress, and toxins, these tiny engines get sluggish. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">Harvard research</a> shows low mitochondrial output is linked to fatigue, poor metabolism, and brain fog.</p>
+    <p>That’s exactly what Mitolyn supports. Mitochondria are your cells’ power plants, converting nutrients into ATP—the real fuel of life. With age, stress, and toxins, these tiny engines get sluggish. <a href="https://pubmed.ncbi.nlm.nih.gov/38241161/" target="_blank">Cientific research</a> shows low mitochondrial output is linked to fatigue, poor metabolism, and brain fog.</p>
 
     <h2>How Mitolyn Works</h2>
     <p>Mitolyn uses science-backed ingredients to support your mitochondria and elevate your NAD+ levels—critical for sustained, clean energy:</p>
