--- a/Mitolyn/05-how-i-beat-the-afternoon-slump-without-sugar-or-coffee/index.html
+++ b/Mitolyn/05-how-i-beat-the-afternoon-slump-without-sugar-or-coffee/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="How I Beat the Afternoon Slump Without Sugar or Coffee" />
   <meta property="og:description" content="Tired at 3 PM every day? It’s not just stress—it’s mitochondrial fatigue. Mitolyn users say they feel focused and energized all afternoon without sugar crashes or caffeine. Try a smarter solution." />
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png" />
-  <meta property="og:url" content="https://gutcare.fit/mitolyn/" />
+  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" />
   <title>How I Beat the Afternoon Slump Without Sugar or Coffee</title>
   <style>
     body {
@@ -64,20 +64,20 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://gutcare.fit/mitolyn/">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
       <img src="https://imgur.com/Da4RL6V.jpg" alt="Gut Care Fitness Logo" loading="lazy" class="center" style="width: 33%;" />
     </a>
 
     <h1>How I Beat the Afternoon Slump Without Sugar or Coffee</h1>
 
-    <a href="https://gutcare.fit/mitolyn/">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net/">
       <img src="https://imgur.com/ZaMzdJg.jpg" alt="A before-after scene: on the left, slumped posture and dark circles; on the right, upright and glowing, with mitochondria floating like balloons." loading="lazy" class="center" style="width: 100%; max-width: 700px;" />
     </a>
 
     <p>It always hit around 3 PM. My eyes would blur, my brain would stall, and I’d reach for chocolate, caffeine—or both. But what if the problem wasn’t sugar, stress, or willpower... but mitochondria?</p>
 
     <h2>What Causes the Afternoon Crash?</h2>
-    <p>The infamous “slump” is often due to declining cellular energy. Your mitochondria power everything from brain function to digestion. And when they start slowing down mid-day, so do you. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">Mitochondrial research</a> shows that improving ATP production may help sustain energy levels naturally—no sugar spikes required.</p>
+    <p>The infamous “slump” is often due to declining cellular energy. Your mitochondria power everything from brain function to digestion. And when they start slowing down mid-day, so do you. <a href="https://pubmed.ncbi.nlm.nih.gov/22502861/" target="_blank">Mitochondrial research</a> shows that improving ATP production may help sustain energy levels naturally—no sugar spikes required.</p>
 
     <h2>How Mitolyn Helped Me Break the Cycle</h2>
     <p>Instead of more coffee, I gave my mitochondria what they actually needed. Mitolyn is a blend of clinically researched ingredients that help your cells produce clean energy:</p>
@@ -93,7 +93,7 @@
        <strong>Week 3:</strong> Better afternoon focus without needing sugar.<br />
        <strong>Week 6:</strong> Consistent energy until bedtime and improved sleep.</p>
 
-    <a href="https://gutcare.fit/mitolyn/" target="_blank">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
       <img src="https://imgur.com/PNhGDDO.jpg" alt="A happy athletic woman feeling motivated while running on the beach." loading="lazy" class="center" style="width: 100%; max-width: 700px;" />
     </a>
 
@@ -117,13 +117,13 @@
     </ul>
 
     <h2>⚠️ Watch Out for Imitations</h2>
-    <p>Mitolyn’s unique blend is being copied. For safety and results, buy only from the <a href="https://gutcare.fit/mitolyn/"><strong>official site</strong></a>.</p>
+    <p>Mitolyn’s unique blend is being copied. For safety and results, buy only from the <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net"><strong>official site</strong></a>.</p>
 
-    <a href="https://gutcare.fit/mitolyn/">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
       <img src="https://imgur.com/RmFYNL0.png" alt="Mitolyn authenticity badge" loading="lazy" class="center" style="width: 50%;" />
     </a>
 
-    <a href="https://gutcare.fit/mitolyn/" class="btn">👉 Beat the Slump Naturally With Mitolyn</a>
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" class="btn">👉 Beat the Slump Naturally With Mitolyn</a>
 
     <h2>Benefits You Can Expect</h2>
     <ul>
