--- a/Mitolyn/06-biohack-your-energy-without-the-crash/index.html
+++ b/Mitolyn/06-biohack-your-energy-without-the-crash/index.html
@@ -77,7 +77,7 @@
     <p>Want to feel truly awake—without the crash? Forget temporary fixes like caffeine or sugar. The secret to sustained mental and physical energy lies inside your cells—specifically, your <strong>mitochondria</strong>. When you feed them right, your whole system lights up.</p>
 
     <h2>ATP: Your Cell’s Real Energy Currency</h2>
-    <p>ATP (adenosine triphosphate) is the fuel your cells burn for everything—focus, muscle strength, digestion, even your heartbeat. But as we age or burn out, mitochondria stop producing ATP efficiently. This creates the dreaded energy dip. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">Scientific studies</a> show improving mitochondrial function leads to better performance and stamina.</p>
+    <p>ATP (adenosine triphosphate) is the fuel your cells burn for everything—focus, muscle strength, digestion, even your heartbeat. But as we age or burn out, mitochondria stop producing ATP efficiently. This creates the dreaded energy dip. <a href="https://pubmed.ncbi.nlm.nih.gov/22304913/" target="_blank">Scientific studies</a> show improving mitochondrial function leads to better performance and stamina.</p>
 
     <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
       <img src="https://imgur.com/TQLwv8v.jpg" alt="What Is ATP in Biology - Adenosine Triphosphate" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
