--- a/Mitolyn/08-from-foggy-to-focused/index.html
+++ b/Mitolyn/08-from-foggy-to-focused/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="From Foggy to Focused: What 60 Days on Mitolyn Feels Like" />
   <meta property="og:description" content="Imagine waking up without brain fog. With Mitolyn, users report sharp focus, clearer thinking, and reduced mental fatigue within 6–8 weeks. Ready to reboot your brain?" />
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png" />
-  <meta property="og:url" content="https://gutcare.fit/mitolyn/" />
+  <meta property="og:url" content="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" />
   <title>From Foggy to Focused: What 60 Days on Mitolyn Feels Like</title>
   <style>
     body {
@@ -64,20 +64,20 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://gutcare.fit/mitolyn/">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
       <img src="https://imgur.com/Da4RL6V.jpg" alt="Gut Care Fitness Logo" loading="lazy" class="center" style="width: 33%;" />
     </a>
 
     <h1>From Foggy to Focused: What 60 Days on Mitolyn Feels Like</h1>
 
-    <a href="https://gutcare.fit/mitolyn/">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
       <img src="https://imgur.com/qVycLvO.jpg" alt="A human brain half-covered in fog, half-crystal clear, with mitochondria forming constellations across the cleared sky." loading="lazy" class="center" style="width: 100%; max-width: 700px;" />
     </a>
 
     <p>Do you start your mornings foggy and slow, even after 8 hours of sleep? You’re not alone—and it’s not just stress or age. Brain fog is often a signal that your mitochondria aren’t producing enough clean energy for your brain to function clearly.</p>
 
     <h2>Mitochondria: The Powerhouse Behind Mental Clarity</h2>
-    <p>Each brain cell relies on mitochondria to generate ATP—the fuel for focus, memory, and reaction time. But when these tiny engines are weakened by inflammation, poor sleep, or age, mental fog creeps in. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">Scientific research</a> now links mitochondrial health to cognitive performance and long-term brain function.</p>
+    <p>Each brain cell relies on mitochondria to generate ATP—the fuel for focus, memory, and reaction time. But when these tiny engines are weakened by inflammation, poor sleep, or age, mental fog creeps in. <a href="https://pubmed.ncbi.nlm.nih.gov/23567191/" target="_blank">Scientific research</a> now links mitochondrial health to cognitive performance and long-term brain function.</p>
 
     <h2>How Mitolyn Helps Clear the Mental Fog</h2>
     <p>Mitolyn supports mitochondrial function using ingredients clinically linked to cognitive health, energy metabolism, and antioxidant protection:</p>
@@ -93,7 +93,7 @@
        <strong>Day 45:</strong> Improved concentration, fewer “blank” moments.<br />
        <strong>Day 60:</strong> Mental clarity, quicker memory recall, elevated mood.</p>
 
-    <a href="https://gutcare.fit/mitolyn/" target="_blank">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
       <img src="https://imgur.com/QgsCrbb.jpg" alt="Woman meditate in the field." loading="lazy" class="center" style="width: 100%; max-width: 700px;" />
     </a>
 
@@ -118,13 +118,13 @@
     </ul>
 
     <h2>⚠️ Beware of Fake Supplements</h2>
-    <p>To avoid ineffective knock-offs, buy Mitolyn only from the <a href="https://gutcare.fit/mitolyn/"><strong>official site</strong></a>. You deserve the real results.</p>
+    <p>To avoid ineffective knock-offs, buy Mitolyn only from the <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net"><strong>official site</strong></a>. You deserve the real results.</p>
 
-    <a href="https://gutcare.fit/mitolyn/">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
       <img src="https://imgur.com/RmFYNL0.png" alt="Mitolyn official verified product seal" loading="lazy" class="center" style="width: 50%;" />
     </a>
 
-    <a href="https://gutcare.fit/mitolyn/" class="btn">👉 Reboot Your Brain With Mitolyn</a>
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" class="btn">👉 Reboot Your Brain With Mitolyn</a>
 
     <h2>Benefits You Can Expect</h2>
     <ul>
