--- a/Mitolyn/09-your-metabolism-has-a-switch/index.html
+++ b/Mitolyn/09-your-metabolism-has-a-switch/index.html
@@ -77,7 +77,7 @@
     <p>You’re eating healthy, moving your body… and still stuck? It’s not you—it’s your metabolism stuck in “idle.” What if there was a biological switch that tells your cells to start burning fat again? That switch exists. It’s called <strong>NAD+</strong>—and Mitolyn helps flip it.</p>
 
     <h2>NAD+ and Mitochondria: The Metabolic Circuit</h2>
-    <p>NAD+ is a molecule that helps mitochondria turn food into energy. As we age or face stress, NAD+ drops—and so does our metabolism. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">Studies show</a> that boosting NAD+ can rejuvenate mitochondrial function, enhance fat burning, and improve energy metabolism at the root level.</p>
+    <p>NAD+ is a molecule that helps mitochondria turn food into energy. As we age or face stress, NAD+ drops—and so does our metabolism. Studies show that boosting NAD+ can rejuvenate mitochondrial function, enhance fat burning, and improve energy metabolism at the root level.</p>
 
     <h2>Mitolyn: The Catalyst That Powers Your Burn</h2>
     <p>Mitolyn’s formula is designed to recharge your mitochondria and NAD+ using proven natural ingredients:</p>
