--- a/Mitolyn/10-detox-without-deprivation/index.html
+++ b/Mitolyn/10-detox-without-deprivation/index.html
@@ -77,7 +77,7 @@
     <p>Forget starving, juicing, or cutting out entire food groups. The smartest detox happens at the <strong>cellular level</strong>. When your mitochondria are sluggish, toxins build up, inflammation rises, and fat loss slows. That’s why restoring cellular energy can unlock your body’s own cleansing potential—without punishment.</p>
 
     <h2>Mitochondria: Your Cellular Cleansing Engine</h2>
-    <p>Mitochondria don’t just make energy. They also drive the body's detoxification by powering enzymatic processes in the liver, kidneys, and even your brain. But when they’re impaired, toxins linger. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">Research</a> shows that mitochondrial support enhances natural detox capacity.</p>
+    <p>Mitochondria don’t just make energy. They also drive the body's detoxification by powering enzymatic processes in the liver, kidneys, and even your brain. But when they’re impaired, toxins linger. <a href="https://pubmed.ncbi.nlm.nih.gov/26754340/" target="_blank">Research</a> shows that mitochondrial support enhances natural detox capacity.</p>
 
     <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
       <img src="https://imgur.com/7WlxHHP.jpg" alt="Infographic Mitochondria Function" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
