--- a/prime-biome/04-3-gut-signals-ignoring/index.html
+++ b/prime-biome/04-3-gut-signals-ignoring/index.html
@@ -94,7 +94,7 @@
 
     <h2>⚠️ Signal #2: Brain Fog & Mood Swings</h2>
     <p>Your gut creates over 90% of your serotonin, the neurotransmitter responsible for happiness, focus, and calm. An unhealthy gut can sabotage your clarity and emotional stability.</p>
-    <p>Research from the <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3099351/" target="_blank">Cleveland Clinic</a> confirms this gut-brain axis. PrimeBiome includes <strong>Lion’s Mane Mushroom</strong> and <strong>Lemon Balm</strong> to support neural clarity while restoring microbial balance.</p>
+    <p>Research from the <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC6780621/" target="_blank">Cleveland Clinic</a> confirms this gut-brain axis. PrimeBiome includes <strong>Lion’s Mane Mushroom</strong> and <strong>Lemon Balm</strong> to support neural clarity while restoring microbial balance.</p>
 
     <h2>⚠️ Signal #3: Irregularity or “Silent” Digestive Stress</h2>
     <p>Constipation, diarrhea, or that feeling of "something’s off"—these aren’t just annoyances. They’re red flags.</p>
