--- a/prime-biome/09-feel-light-again-from-the-soil-up/index.html
+++ b/prime-biome/09-feel-light-again-from-the-soil-up/index.html
@@ -92,7 +92,7 @@
     <h2>🌱 From the Earth, For Your Gut</h2>
     <p>Unlike fragile, refrigerated probiotics that die before reaching your gut, PrimeBiome uses resilient <strong>spore-forming strains</strong> found naturally in soil—organisms your ancestors were exposed to daily but that modern life filters out.</p>
 
-    <p>Research from the <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4810740/" target="_blank">National Institutes of Health</a> confirms the powerful role of soil-based probiotics in strengthening the gut barrier, reducing inflammation, and supporting mental wellness.</p>
+    <p>Research from the <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC11342770/" target="_blank">Scientific studies</a> confirms the powerful role of soil-based probiotics in strengthening the gut barrier, reducing inflammation, and supporting mental wellness.</p>
 
     <a href="https://b822f1wnjv2-7vcf2dubcesbut.hop.clickbank.net" target="_blank">
       <img src="https://imgur.com/KBVGCmP.jpg" alt="Close-up scientist watering plant." class="middle-image" loading="lazy" />
